FIX: some alignment issues

--- a/src/components/footerPrimary/styles.scss
+++ b/src/components/footerPrimary/styles.scss
@@ -8,6 +8,10 @@
   position: relative;
   padding: 300px 0 20px;
 
+  @include mobile {
+    text-align: center;
+  }
+
   &::before {
     position: absolute;
     top: 200px;
@@ -27,6 +31,10 @@
   nav {
     display: flex;
     flex-direction: column;
+
+    @include mobile {
+      display: none;
+    }
 
     a {
       color: $white;
@@ -50,6 +58,14 @@
     padding: 29px 0;
     margin-top: 48px;
     color: $gray-7;
+
+    .text-right {
+
+      @include mobile {
+        text-align: center !important;
+        margin-top: 20px;
+      }
+    }
   }
 
   .logo {
