--- a/src/components/home/talentWorkforce/styles.scss
+++ b/src/components/home/talentWorkforce/styles.scss
@@ -19,6 +19,11 @@
     max-width: 90%;
     font-weight: 600;
     margin-top: 40px;
+
+    @include mobile {
+      max-width: 100%;
+      font-size: 1.7rem;
+    }
   }
 
   .title4 {
@@ -44,14 +49,26 @@
     column-gap: 20px;
     row-gap: 20px;
 
+    @include mobile {
+      grid-template-columns: 1fr;
+      column-gap: 10px;
+    row-gap: 16px;
+    }
+
     .card-box:nth-child(1) {
       top: 50px;
+
+      @include mobile {
+        top: 0;
+      }
     }
     .card-box:nth-child(3) {
-    top: 50px;
+      top: 50px;
+
+      @include mobile {
+        top: 0;
+      }
     }
-
-
   }
 
   .card-box {
